src/components/style/ProjectCard.css
 .ProjectCard {
    /*background-color: #0D0D0D;*/
    background-color: #ff0000;
    width: 54.62vw;
    height: 18.83vw;
    border-radius: 3.8vw;
    margin-bottom: 2.3vw;
    padding: 1.7vw 1.8vw 1.7vw 1.7vw;
    display: flex;
    justify-content: space-between;
    margin-right: auto;
    margin-left: auto;
}
.ProjectDetails {
    width: 25.62vw;
    height: 16.82vw;
    padding: 0.98vw;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
}
.ProjectInfo{
    background-color: transparent;
    width: 25.62vw;
    height: 11.56vw;
}
.ProjectName{
    text-align: left;
    color: #FFFFFF;
    font-family: "Switzer-Variable", sans-serif;
    font-weight: 500;
    font-size: 1.4vw;
    margin-bottom: 1.25vw;
    background-color: transparent;
}
.ProjectDescription {
    text-align: left;
    color: #939393;
    font-family: "Switzer-Variable", sans-serif;
    font-weight: 300;
    font-size: 1vw;
    background-color: transparent;
}
.CardImg {
    width: fit-content;
    height: fit-content;
    background-color: transparent;
    display: flex;
    align-items: center;
}
.ProjectImg {
    width: 25.1vw;
    border-radius: 2vw;
}
@media (max-width: 768px) {
    .ProjectCard {
        width: 78.1vw;
        height: 126.46vw;
        border-radius: 10.68vw;
        margin-bottom: 5.59vw;
        padding: 5.34vw 5.34vw 7.12vw 5.34vw;
        flex-direction: column;
        gap: 6vw;
    }
    .ProjectDetails {
        margin-right: auto;
        margin-left: auto;
        width: 74.55vw;
        height: 61.83vw;
        padding-right: 1.78vw;
        padding-left: 1.78vw;
        gap: 7.1vw;
    }
    .ProjectInfo{
        width: 73.53vw;
    }
    .ProjectName{
        font-size: 4.32vw;
        margin-bottom: 3.56vw;
    }
    .ProjectDescription{
        font-size: 3.56vw;


    }
    .ProjectImg {
        width: 78.11vw;
        height: 58.52vw;
        border-radius: 6.36vw;
    }
}

